--- a/less/all.less
+++ b/less/all.less
@@ -1,6 +1,9 @@
 // our LESS
 @import 'node_modules/bootstrap/less/bootstrap.less';
+@import './globals.less';
 @import './main.less';
+@import './bootGrids.less';
+@import './footer.less';
 // @import './header.less';
 // @import './footer.less';
 // ...
