--- a/less/main.less
+++ b/less/main.less
@@ -1,3 +1,30 @@
-body{
-    background-color: lightgrey;
+html,body{
+    height: 100%;
 }
+
+.center-vertically{
+    position: relative;
+    top: 50%;
+    -webkit-transform: translateY(-50%);
+    -ms-transform: translateY(-50%);
+    transform: translateY(-50%);
+}
+
+.header{
+    height: 40%;
+    h1{
+        margin: 0;
+        padding-top: 20px;
+        padding-left: 20px;
+    }
+}
+
+.header-background{
+    background: url("../images/laboratory.png") no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+}
+
+
