--- a/less/globals.less
+++ b/less/globals.less
@@ -1,4 +1,4 @@
-@text-pos-basic:center;
-@basic-body-background-color:lightgray;
-@basic-p-font-size:16pt;
+@header-height: 30%;
+@footer-height: 30%;
+@side-bar-content-initial-height:100%;
 
