--- a/less/main.less
+++ b/less/main.less
@@ -11,7 +11,7 @@ html,body{
 }
 
 .header{
-    height: 40%;
+    height: @header-height;
     h1{
         margin: 0;
         padding-top: 20px;
@@ -26,5 +26,7 @@ html,body{
     -o-background-size: cover;
     background-size: cover;
 }
+
+
 
 
