--- a/less/all.less
+++ b/less/all.less
@@ -3,7 +3,10 @@
 @import './globals.less';
 @import './main.less';
 @import './bootGrids.less';
+@import './sidebar.less';
+@import './content.less';
 @import './footer.less';
+
 // @import './header.less';
 // @import './footer.less';
 // ...
