--- a/less/main.less
+++ b/less/main.less
@@ -28,5 +28,11 @@ html,body{
 }
 
 
+.sidebar-content{
+    /*height: @side-bar-content-initial-height;*/
+    background-color: lightpink;
+}
+
+
 
 
