--- a/less/main.less
+++ b/less/main.less
@@ -16,11 +16,14 @@ html,body{
         margin: 0;
         padding-top: 20px;
         padding-left: 20px;
+        color: white;
+        font-size: 6vmin;
     }
 }
 
+
 .header-background{
-    background: url("../images/laboratory.png") no-repeat center center fixed;
+    background: url("../images/blogg.jpg") no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
