--- a/less/globals.less
+++ b/less/globals.less
@@ -1,4 +1,6 @@
 @header-height: 30%;
 @footer-height: 30%;
-@side-bar-content-initial-height:100%;
+@side-bar-content-initial-height:100vh;
+
+@blog-default-margin-bottom:10px;
 
