--- a/less/main.less
+++ b/less/main.less
@@ -32,9 +32,46 @@ html,body{
 
 
 .sidebar-content{
-    /*height: @side-bar-content-initial-height;*/
+    min-height: @side-bar-content-initial-height;
     background-color: lightpink;
 }
+
+.blog-entry{
+    margin: 30px 0px 20px 20px;
+    padding: 15px;
+    width: 80%;
+    background-color: red;
+    min-height: 30vh;
+
+    .blog-entry-title{
+        width: 90%;
+        height: 5vh;
+        background-color: #00ffff;
+        margin-bottom: @blog-default-margin-bottom;
+    }
+
+    .blog-entry-img{
+        width: 50%;
+        height: 20vh;
+        margin-bottom:@blog-default-margin-bottom;
+        background-color: #0000f6;
+    }
+
+    .blog-entry-content{
+        width: 90%;
+        min-height: 15vh;
+        margin-bottom:@blog-default-margin-bottom;
+        background-color: #bababa;
+    }
+
+    .blog-entry-foot{
+        width: 50%;
+        height: 5vh;
+        background-color: #00ffff;
+    }
+}
+
+
 
 
 
