--- a/less/main.less
+++ b/less/main.less
@@ -36,6 +36,16 @@ html,body{
     background-color: lightpink;
 }
 
+.sidebar{
+    background-color: green !important;
+    min-height: 20vh;
+}
+
+.content{
+    background-color: yellow !important;
+    min-height: @side-bar-content-initial-height;
+}
+
 .blog-entry{
     margin: 30px 0px 20px 20px;
     padding: 15px;
