--- a/less/main.less
+++ b/less/main.less
@@ -34,17 +34,19 @@ html,body{
 .sidebar-content{
     min-height: @side-bar-content-initial-height;
     background-color: lightpink;
+
+    .sidebar{
+        background-color: green !important;
+        min-height: 20vh;
+    }
+
+    .content{
+        background-color: yellow !important;
+        min-height: @side-bar-content-initial-height;
+    }
 }
 
-.sidebar{
-    background-color: green !important;
-    min-height: 20vh;
-}
 
-.content{
-    background-color: yellow !important;
-    min-height: @side-bar-content-initial-height;
-}
 
 .blog-entry{
     margin: 30px 0px 20px 20px;
@@ -79,6 +81,10 @@ html,body{
         height: 5vh;
         background-color: #00ffff;
     }
+}
+
+.sidebar-entry{
+    
 }
 
 
