--- a/less/main.less
+++ b/less/main.less
@@ -34,22 +34,24 @@ html,body{
 .sidebar-content{
     min-height: @side-bar-content-initial-height;
     background-color: lightpink;
-
+    
     .sidebar{
         background-color: green !important;
         min-height: 20vh;
+        padding-top: 30px;
     }
 
     .content{
         background-color: yellow !important;
         min-height: @side-bar-content-initial-height;
+        padding-top: 30px;
     }
 }
 
 
 
 .blog-entry{
-    margin: 30px 0px 20px 20px;
+    margin: 0px 0px 20px 20px;
     padding: 15px;
     width: 80%;
     background-color: red;
@@ -84,7 +86,15 @@ html,body{
 }
 
 .sidebar-entry{
-    
+    margin: 0px 0px 5px 15px;
+    padding: 3px;
+    width: 90%;
+    background-color: red;
+    min-height: 3vh;
+
+    .index{
+        display: none;
+    }
 }
 
 
