--- a/less/main.less
+++ b/less/main.less
@@ -81,11 +81,9 @@ html,body{
                 margin-bottom: @blog-default-margin-bottom;
             }
 
-            .blog-entry-img{
-                width: 50%;
-                height: 20vh;
-                margin-bottom:@blog-default-margin-bottom;
-                background-color: #0000f6;
+            img{
+                display: block;
+                margin-bottom: @blog-default-margin-bottom;
             }
 
             .blog-entry-content{
