--- a/less/main.less
+++ b/less/main.less
@@ -17,7 +17,9 @@ html,body{
         padding-top: 20px;
         padding-left: 20px;
         color: white;
-        font-size: 6vmin;
+        font-family: 'Gabriela', serif;
+        font-size: 7vmin;
+        font-weight: bold;
     }
 }
 
