--- a/less/globals.less
+++ b/less/globals.less
@@ -3,3 +3,4 @@
 @side-bar-content-initial-height:70vh;
 @blog-default-margin-bottom:10px;
 @blog-entry-default-padding:10px;
+@header-back-ground:"../images/blogg.jpg";
