--- a/less/main.less
+++ b/less/main.less
@@ -25,7 +25,7 @@ html,body{
 
 
 .header-background{
-    background: url("../images/blogg.jpg") no-repeat center center fixed;
+    background: url(@header-back-ground) no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
