--- a/less/main.less
+++ b/less/main.less
@@ -2,6 +2,14 @@ html,body{
     height: 100%;
 }
 
+.hide{
+    visibility: hidden;
+}
+
+.show{
+    visibility: visible;
+}
+
 .center-vertically{
     position: relative;
     top: 50%;
@@ -42,7 +50,7 @@ html,body{
         background-color: green !important;
         /*min-height: 20vh;*/
         padding-top: 30px;
-        padding-bottom: 30px;
+        padding-bottom: 20px;
 
         .sidebar-menu{
             display: inline-block;
@@ -77,7 +85,7 @@ html,body{
         .blog-entry{
             margin: 0px 0px 20px 20px;
             padding: 15px;
-            width: 80%;
+            width: 95%;
             background-color: red;
             min-height: 30vh;
 
