--- a/less/footer.less
+++ b/less/footer.less
@@ -1,6 +1,6 @@
 .footer-container-main{
     height: @footer-height;
-    background-color: #2A2730;
+    background-color: @footer-background-color;
     font-size: 11pt;
     color: white;
     text-align: left;
