--- a/less/globals.less
+++ b/less/globals.less
@@ -4,3 +4,6 @@
 @blog-default-margin-bottom:10px;
 @blog-entry-default-padding:10px;
 @header-back-ground:"../images/blogg.jpg";
+@side-bar-content-background-color:white;
+@footer-background-color:#2A2730;
+@border-basic-a:2px solid #563D7C;
