--- a/less/main.less
+++ b/less/main.less
@@ -97,10 +97,10 @@ html,body{
             min-height: 30vh;
 
             .blog-entry-title{
-                width: 90%;
+                min-width: 50%;
                 height: 5vh;
+                font-size: 14pt;
                 font-weight: bold;
-                background-color: #00ffff;
                 margin-bottom: @blog-default-margin-bottom;
                 padding: @blog-entry-default-padding;
             }
@@ -108,20 +108,19 @@ html,body{
             img{
                 display: block;
                 margin-bottom: @blog-default-margin-bottom;
+                padding: @blog-entry-default-padding;
             }
 
             .blog-entry-content{
                 width: 90%;
                 min-height: 15vh;
                 margin-bottom:@blog-default-margin-bottom;
-                background-color: #bababa;
                 padding: @blog-entry-default-padding;
             }
 
             .blog-entry-foot{
-                width: 50%;
+                min-width: 20%;
                 height: 5vh;
-                background-color: #00ffff;
                 padding: @blog-entry-default-padding;
             }
         }
