--- a/less/bootGrids.less
+++ b/less/bootGrids.less
@@ -8,10 +8,7 @@
 }
 
 .col-xs-2,.col-xs-12,.col-xs-8,.col-xs-4, .col-xs-6, .col-sm-4, .col-sm-6,.col-sm-3{
-    /*background-color: transparent;*/
-    /*border-style: solid;*/
-    border-width: 1px;
-    border-color: white;
+    border:@show-bootstrap-grids-borders;
     position: relative;
 }
 
