--- a/less/main.less
+++ b/less/main.less
@@ -73,7 +73,6 @@ html,body{
             width: 90%;
             border:@border-basic-a;
             min-height: 3vh;
-
             .index{
                 display: none;
             }
@@ -81,8 +80,10 @@ html,body{
 
         .sidebar-entry:hover{
             cursor: pointer;
+            color: white;
+            background-color: #563D7C;
         }
-        
+
         .sidebar-entry-mobile-view{
             width: 45% !important;
             float: left;
