--- a/less/main.less
+++ b/less/main.less
@@ -70,7 +70,7 @@ html,body{
         .sidebar-entry{
             margin: 0px 0px 10px 20px;
             padding: 3px;
-            width: 90%;
+            min-width: 40%;
             border:@border-basic-a;
             min-height: 3vh;
             .index{
@@ -89,8 +89,6 @@ html,body{
             float: left;
         }
     }
-
-
 
 
     .content{
