--- a/less/main.less
+++ b/less/main.less
@@ -68,6 +68,7 @@ html,body{
         }
 
         .sidebar-entry{
+            font-size: @basic-font-size-vmin;
             margin: 0px 0px 10px 20px;
             padding: 3px;
             min-width: 40%;
@@ -105,7 +106,7 @@ html,body{
             .blog-entry-title{
                 min-width: 50%;
                 height: 5vh;
-                font-size: 14pt;
+                font-size: 3vmin;
                 font-weight: bold;
                 margin-bottom: @blog-default-margin-bottom;
                 padding: @blog-entry-default-padding;
@@ -119,6 +120,7 @@ html,body{
 
             .blog-entry-content{
                 width: 90%;
+                font-size: @basic-font-size-vmin;
                 min-height: 5vh;
                 margin-bottom:@blog-default-margin-bottom;
                 padding: @blog-entry-default-padding;
