--- a/less/globals.less
+++ b/less/globals.less
@@ -9,3 +9,4 @@
 @border-basic-a:2px solid #563D7C;
 @border-basic-b:3px solid #e5e5e5;
 @show-bootstrap-grids-borders:3px none blue; //solid to show, none to hide
+@basic-font-size-vmin: 2.2vmin;
