--- a/less/globals.less
+++ b/less/globals.less
@@ -1,5 +1,6 @@
 @header-height: 30%;
 @footer-height: 30%;
+@blog-entry-blog-entry-margin-left:5px; // Important!
 @side-bar-content-initial-height:70vh;
 @blog-default-margin-bottom:10px;
 @blog-entry-default-padding:10px;
