--- a/less/globals.less
+++ b/less/globals.less
@@ -1,3 +1,7 @@
+@LG:1200px;
+@MD: 992px;
+@SM: 768px;
+@XS: 480px;
 @header-height: 30%;
 @footer-height: 30%;
 @blog-entry-blog-entry-margin-left:5px; // Important!
@@ -11,3 +15,4 @@
 @border-basic-b:3px solid #e5e5e5;
 @show-bootstrap-grids-borders:3px none blue; //solid to show, none to hide
 @basic-font-size-vmin: 2.2vmin;
+@side-bar-menu-height-width: 20px;
