--- a/less/footer.less
+++ b/less/footer.less
@@ -16,6 +16,16 @@
         cursor: pointer;
     }
 
+
+    .footer-column{
+        margin-top: 10px;
+        padding-right: 15px;
+    }
+
+    .footer-last{
+        text-align: right;
+    }
+    
     .fb-like{
         margin-right: 20px;
     }
@@ -26,13 +36,13 @@
     color: lightgray;
 }
 
-.footer-last{
-    text-align: right;
+@media (max-width:@XS){
+   .footer-container-main{
+       a{
+            padding-right: 5px;
+       }
+   }
 }
 
 
-.footer-column{
-    margin-top: 10px;
-    padding-right: 15px;
-}
 
