--- a/less/globals.less
+++ b/less/globals.less
@@ -15,4 +15,5 @@
 @border-basic-b:3px solid #e5e5e5;
 @show-bootstrap-grids-borders:3px none blue; //solid to show, none to hide
 @basic-font-size-vmin: 2.4vmin;
+@font-size-mobile-vmin: 3.8vmin;
 @side-bar-menu-height-width: 20px;
