--- a/less/main.less
+++ b/less/main.less
@@ -44,7 +44,7 @@ html,body{
 
     .sidebar{
         position: relative;
-        padding-top: 30px;
+        padding-top: 50px;
         padding-bottom: 20px;
 
         .sidebar-menu{
@@ -60,7 +60,7 @@ html,body{
         }
 
         .sidebar-menu:hover{
-           img{
+            img{
                 width: @side-bar-menu-height-width + 3px;
                 height: @side-bar-menu-height-width + 3px;
             }
@@ -88,7 +88,7 @@ html,body{
 
     .content{
         min-height: @side-bar-content-initial-height;
-        padding-top: 30px;
+        padding-top: 50px;
 
         .blog-entry{
             margin: 0px 0px 20px @blog-entry-blog-entry-margin-left;
@@ -99,7 +99,7 @@ html,body{
 
             .blog-entry-title{
                 min-width: 50%;
-                height: 5vh;
+                min-height: 5vh;
                 font-weight: bold;
                 margin-bottom: @blog-default-margin-bottom;
                 padding: @blog-entry-default-padding;
@@ -113,7 +113,7 @@ html,body{
             }
 
             .blog-entry-content{
-                width: 90%;
+                width: 97%;
                 min-height: 5vh;
                 margin-bottom:@blog-default-margin-bottom;
                 padding: @blog-entry-default-padding;
@@ -151,7 +151,7 @@ html,body{
     }
 
     .sidebar-entry{
-        .sidebar-entry-mobile-view;
+        /*.sidebar-entry-mobile-view;*/
     }
 
     .sidebar-menu{
@@ -167,6 +167,7 @@ html,body{
     .blog-entry img{
         max-width: 280px !important;
     }
+   
 }
 
 
